--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ vc140.pdb
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/tasks.json
+Note/List.md
+Compile.bat
+Note/Markdown gammar.md
+Note/Stack.md
+Note/Tree.md
+.vscode/settings.json
